<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:elevation="1dp">

        <TextView
            android:id="@+id/saveId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/txtModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/r"/>
        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="0.2"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/_9_000_00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/ano"/>

        <TextView
            android:id="@+id/txtAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="0.2"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/_2021"/>

       <ImageView
           android:id="@+id/menuItens"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="7dp"
           android:src="@drawable/baseline_more_vert_24"
           android:contentDescription="@string/menuitens" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:contentDescription="@string/line" />
</LinearLayout>